planer og medlemskort

--- a/overblik.html
+++ b/overblik.html
@@ -49,8 +49,18 @@
     <div class="whiteBackground">
         <ul class="overblik">
             <li>
-                <a class="overblikList" href="#">
+                <a class="overblikList" href="medlemskort.html">
                     <div class="colorCircle color1"></div>
+                    <div class="listTxt">
+                        <h2 class="overblikTitel">Mit Medlemskort</h2>
+                        <p>Se dit kort her</p>
+                    </div>
+                </a>
+            </li>
+            <hr>
+            <li>
+                <a class="overblikList" href="#">
+                    <div class="colorCircle color2"></div>
                     <div class="listTxt">
                         <h2 class="overblikTitel">Min konto</h2>
                         <p>Navn, adresse mm.</p>
@@ -60,7 +70,7 @@
             <hr>
             <li>
                 <a class="overblikList" href="rewards.html">
-                    <div class="colorCircle color2"></div>
+                    <div class="colorCircle color3"></div>
                     <div class="listTxt">
                         <h2 class="overblikTitel">Mine belønninger</h2>
                         <p>10 rabatter venter</p>
@@ -70,7 +80,7 @@
             <hr>
             <li>
                 <a class="overblikList" href="#">
-                    <div class="colorCircle color3"></div>
+                    <div class="colorCircle color1"></div>
                     <div class="listTxt">
                         <h2 class="overblikTitel">Mine fakturer</h2>
                         <p>3 fakturer</p>
@@ -80,7 +90,7 @@
             <hr>
             <li>
                 <a class="overblikList" href="#">
-                    <div class="colorCircle color1"></div>
+                    <div class="colorCircle color2"></div>
                     <div class="listTxt">
                         <h2 class="overblikTitel">Mine produkter</h2>
                         <p>4 produkter</p>
@@ -90,7 +100,7 @@
             <hr>
             <li>
                 <a class="overblikList" href="#">
-                    <div class="colorCircle color2"></div>
+                    <div class="colorCircle color3"></div>
                     <div class="listTxt">
                         <h2 class="overblikTitel">Synsprøve resultater</h2>
                         <p>2 resultater</p>
@@ -99,7 +109,7 @@
             </li>
         </ul>
         <button class="greenBtn btn">
-            <p class="greenBtnTxt activeText">Opgrader plan</p>
+            <p class="greenBtnTxt activeText">Skift plan</p>
             <i class="fa-solid fa-arrow-right greenArrow"></i>
         </button>
         <!-- Footer -->
