--- a/rewards.html
+++ b/rewards.html
@@ -163,7 +163,7 @@
           </div>
           <div class="card-face card-back">
             <button class="close-btn" onclick="closeModal()">
-              <i class="fa-solid fa-arrow-left"></i>
+              <i class="fa-solid fa-xmark"></i>
             </button>
               <img class="qrCode" src="img/qr-code.png" alt="qr-code">
               <h2 class="modal-overskrift">Gratis brillerens</h2>
