--- a/medlemskort.html
+++ b/medlemskort.html
@@ -43,36 +43,27 @@
 
     <div class="background">
         <br>
-        <h1 class="rewardHeader">Vælg din plan</h1>
+        <h1 class="rewardHeader">Medlemskort</h1>
     </div>
-    
 
     <div class="whiteBackground">
         <div class="marginClass">
-            <div class="selectedPlan">
-                <div class="planDiv">
-                    <h2 class="planTxt">Bronze</h2>
-                    <p>optjen Point</p>   
-                </div>
-                <h2 class="planPrice">Gratis</h2>
-            </div>
-            <div class="selectedPlan">
-                <div class="planDiv">
-                    <h2 class="planTxt">Sølv</h2>
-                    <p>optjen Point</p>
-                </div>
-                <h2 class="planPrice">25,- / md.</h2>
-            </div>
-            <div class="selectedPlan">
-                <div class="planDiv">
-                    <h2 class="planTxt">Guld</h2>
-                    <p>optjen Point</p>
-                </div>
-                <h2 class="planPrice">50,- / md.</h2>
-            </div>
+            <h1 class="underOverskrift2">235 Points</h1>
 
+            <p class="centerTxt">Her er dit kundeklub kort, alt du skal gøre er at fremvise dette til din ekspedient i Brillebaren.</p>
+
+            <div class="medlemskort">
+                <h2 class="medlemsNavn">Malene Mortensen</h2>
+                <p class="medlemsTal">123456789456789 6789</p>
+                <div class="barcodeBackground">
+                    <img class="barCode" src="img/barcode.png" alt="">
+                </div>
+                <div class="blackSquare"></div>
+            </div>
+            <p class="centerTxt">Hver 50kr. du bruger giver dig 25 points. </p>
+            
             <button class="greenBtn btn">
-                <p class="greenBtnTxt activeText">Opgrader plan</p>
+                <p class="greenBtnTxt activeText">Skift plan</p>
                 <i class="fa-solid fa-arrow-right greenArrow"></i>
             </button>
         </div>
@@ -80,7 +71,3 @@
         <!-- Footer -->
         <footer></footer>
     </div>
-
-
-</body>
-</html>
