btns and some script

--- a/faq.html
+++ b/faq.html
@@ -44,7 +44,7 @@
 </header>
 
   <div class="background">
-    <h1>Ofte stillede spørgsmål</h1>
+    <h1>Har du spørgsmål?</h1>
   </div>
 
   <div class="whiteBackground" id="whiteBackgroundShort">
