--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="javascript/navbar_javascript.js"></script>
+    <script src="javascript/btn_paths.js"></script>
     <link rel="stylesheet" href="stylesheet/style.css">
     <script src="https://kit.fontawesome.com/51dbfd6491.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -47,17 +48,17 @@
   <div class="whiteBackground">
     <div class="landingBox">
       <h2 class="boxText">Se dit medlemskort</h2>
-      <button class="btn btnIndex">
+      <button class="btn btnIndex" id="medlemskort">
           <p class="btnText">Medlemskort</p>
           <i class="fa-solid fa-arrow-right loginArrow"></i>
       </button>
     </div>
     <div class="landingBox">
       <h2 class="boxText">Se dine belønninger</h2>
-      <a class="btn btnIndex" href="rewards.html">
+      <btn class="btn btnIndex" id="rewards">
           <p class="btnText">Belønninger</p>
           <i class="fa-solid fa-arrow-right loginArrow"></i>
-      </a>
+      </btn>
     </div>
   <h2 class="underOverskrift">Månedens udvalgte belønninger:</h2>
   <div class="rewardBox color1">
