--- a/landingpage.html
+++ b/landingpage.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheet/style.css">
+    <script src="javascript/btn_paths.js"></script>
     <script src="https://kit.fontawesome.com/51dbfd6491.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,14 +19,14 @@
     <div class="whiteBackground">
     <div class="landingBox">
         <h4 class="boxText">Har du allerede en konto?</h4>
-        <button class="btn loginBtn">
+        <button id="login" class="btn loginBtn">
             <p class="btnText">Login</p>
             <i class="fa-solid fa-arrow-right loginArrow"></i>
         </button>
     </div>
     <div class="landingBox">
         <h4 class="boxText">Tilmeld dig BrilleBaren Plus</h4>
-        <button class="btn loginBtn">
+        <button id="opret" class="btn loginBtn">
             <p class="btnText">Opret konto</p>
             <i class="fa-solid fa-arrow-right loginArrow"></i>
         </button>
