--- a/medlemskort.html
+++ b/medlemskort.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="javascript/navbar_javascript.js"></script>
+    <script src="javascript/btn_paths.js"></script>
     <link rel="stylesheet" href="stylesheet/style.css">
     <script src="https://kit.fontawesome.com/51dbfd6491.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -62,7 +63,7 @@
             </div>
             <p class="centerTxt">Hver 50kr. du bruger giver dig 25 points. </p>
             
-            <button class="greenBtn btn">
+            <button id="changePlan" class="greenBtn btn">
                 <p class="greenBtnTxt activeText">Skift plan</p>
                 <i class="fa-solid fa-arrow-right greenArrow"></i>
             </button>
