--- a/login.html
+++ b/login.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="javascript/navbar_javascript.js"></script>
   <script src="javascript/login.js"></script>
+  <script src="javascript/backbtn.js"></script>
   <link rel="stylesheet" href="stylesheet/style.css">
   <script src="https://kit.fontawesome.com/51dbfd6491.js" crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
