--- a/opret.html
+++ b/opret.html
@@ -103,8 +103,8 @@
             <br><br>
 
             <label class="vilkr">
-                <p>Ved at lave en konto acceptere du vores <a class="greenLink" href="#">Vilkår & betingelser</a> og <a class="greenLink" href="#">Privathedspolitik</a></p>
-                <input type="checkbox" value="terms" class="checkboxSquare2" name="terms">
+                <p>Ved at lave en konto acceptere du vores <br> <a class="greenLink" href="#">Vilkår & betingelser</a> og <a class="greenLink" href="#">Privathedspolitik</a></p>
+                <input type="checkbox" value="terms" class="checkboxSquare" name="terms">
             </label>
 
             <span class="loginCenterTxt txtLine"> Eller anvend </span>
