--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="javascript/navbar_javascript.js"></script>
+    <script src="javascript/modal.js"></script>
     <script src="javascript/btn_paths.js"></script>
     <link rel="stylesheet" href="stylesheet/style.css">
     <script src="https://kit.fontawesome.com/51dbfd6491.js" crossorigin="anonymous"></script>
@@ -61,14 +62,14 @@
       </btn>
     </div>
   <h2 class="underOverskrift">Månedens udvalgte belønninger:</h2>
-  <div class="rewardBox color1">
+  <div onclick="openModal()" class="rewardBox color1">
     <div class="rewardGrid">
       <h3 class="boxText1 activeText">Gratis Brillerens</h3>
       <h3 class="boxText1 activeTextGreen">Klar til brug</h3>
     </div>
     <div class="rewardGrid2">
       <p class="procenter">100%</p>
-      <i class="fa-solid fa-circle-play"></i>
+      <i class="fa-solid fa-circle-check"></i>
     </div>
   </div>
   <div class="rewardBox color2">
@@ -89,6 +90,45 @@
     <div class="rewardGrid2">
       <p class="procenter">10%</p>
       <i class="fa-solid fa-circle-play"></i>
+    </div>
+  </div>
+
+  <div id="myModal" class="modal">
+    <div class="modal-content">
+        <div class="card" id="card">
+            <div class="card-face card-front">
+              <button class="close-btn" onclick="closeModal()">
+                <i class="fa-solid fa-arrow-left"></i>
+              </button>
+                <div class="modal-icons">
+                    <i class="fa-solid fa-spray-can-sparkles"></i>
+                    <i class="fa-solid fa-glasses fa-rotate-by"></i>
+                </div>
+                <h2 class="modal-overskrift">Gratis brillerens</h2>
+                <p class="modalTxt">Udløber 01-07-2023</p>
+                <br>
+                <p class="modalTxt">En gratis spray brillerens, <br> som kan afhentes i Brillebaren</p>
+                <button class="greenBtn2" id="startAnimationButton" onclick="flipCard()">
+                    <p class="greenBtnTxt">Aktiver Belønning</p>
+                </button>
+            </div>
+            <div class="card-face card-back">
+              <button class="close-btn" onclick="closeModal()">
+                <i class="fa-solid fa-xmark"></i>
+              </button>
+                <img class="qrCode" src="img/qr-code.png" alt="qr-code">
+                <h2 class="modal-overskrift">Gratis brillerens</h2>
+                <p class="modalTxt">Udløber 01-07-2023</p>
+                <br>
+                <p class="modalTxt">En gratis spray brillerens, <br> som kan afhentes i Brillebaren</p>
+                    
+                <div class="rewardActivatet">
+                  <h2 class="activatetTxt">Aktiveret</h2>
+                  <i class="fChekmark fa-solid fa-check"></i>
+                </div>
+  
+            </div>
+        </div>
     </div>
   </div>
   <footer></footer>
