--- a/overblik.html
+++ b/overblik.html
@@ -117,7 +117,7 @@
 
         <br><br>
         
-        <a class="greenLink" href="landingpage.html" >Log af</a>
+        <a class="greenLink" href="index.html" >Log af</a>
             </div>
 
             
