--- a/rewards.html
+++ b/rewards.html
@@ -79,8 +79,8 @@
               <h3 class="boxText1 activeText">Gratis Pudseklud</h3>
             </div>
             <div class="rewardGrid2">
-              <p class="procenter">25%</p>
-              <i class="fa-solid fa-circle-play"></i>
+              <p class="procenter">50%</p>
+              <img class="almost" src="img/load.png" alt="almost icon">
             </div>
           </div>
           <div class="rewardBox color2">
@@ -88,8 +88,8 @@
               <h3 class="boxText1 activeText">20% rabat på næste køb</h3>
             </div>
             <div class="rewardGrid2">
-              <p class="procenter">25%</p>
-              <i class="fa-solid fa-circle-play"></i>
+              <p class="procenter">50%</p>
+              <img class="almost" src="img/load.png" alt="almost icon">
             </div>
           </div>
           <div class="rewardBox color3">
@@ -97,13 +97,13 @@
               <h3 class="boxText1 activeText">Gratis brillekæde</h3>
             </div>
             <div class="rewardGrid2">
-              <p class="procenter">25%</p>
-              <i class="fa-solid fa-circle-play"></i>
+              <p class="procenter">50%</p>
+              <img class="almost" src="img/load.png" alt="almost icon">
             </div>
           </div>
 
 <!-- Tjen hurtige points -->
-        <h1 class="underOverskrift">Tjen hurtige points</h1>
+        <h1 class="underOverskrift">Tjen points nu</h1>
         <div class="rewardBox color1">
             <div class="rewardGrid">
                 <h3 class="rewardText activeText">Henvis en ven</h3>
